--- a/templates/login.html
+++ b/templates/login.html
@@ -2,10 +2,15 @@
 <html lang="en">
 
 <head>
+    <link rel="shortcut icon" href="{{ url_for('static',filename ='favicon.ico') }}" type="image/x-icon">
+    <meta property="og:title" content="Sweeter - the sweetest site">
+    <meta property="og:description" content="Are you looking for me">
+    <meta property="og:image" content="{{ url_for('static', filename=ogimage.jpg) }}">
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sweeter</title>
+    <title>Login or sign up</title>
 
     <!-- Google Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,9 +19,10 @@
     <!-- Bulma -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <!-- Font Awesome-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+    <!-- External CSS-->
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 
     <!-- Jquery -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"
@@ -25,80 +31,186 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"
         integrity="sha512-3j3VU6WC5rPQB4Ld1jnLV7Kd5xr+cq9avvhwqzbH/taCRNURoeEpoPBK9pDyeukwSxwRPJ8fDgvYXd6SkaZ2TA=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
     <script>
         function sign_in() {
+            let username = $("#input-username").val();
+            let password = $("#input-password").val();
+
+            if (username === "") {
+                $("#help-id-login").text("Please input your id.");
+                $("#input-username").focus();
+                return;
+            } else {
+                $("#help-id-login").text("");
+            }
+
+            if (password === "") {
+                $("#help-password").text("Please input your password.");
+                $("#input-password").focus();
+                return;
+            } else {
+                $("#help-password-login").text("");
+            }
             $.ajax({
-                type: 'POST',
-                url: '/sign_in',
+                type: "POST",
+                url: "/sign_in",
                 data: {
                     username_give: username,
                     password_give: password,
                 },
                 success: function (response) {
-                    if (response['result'] === 'success') {
-                        let token = response['token'];
-                        $.cookie('mytoken', token, { path: '/' })
-                        alert('Login Success')
-                        window.location.href = "/"
+                    if (response["result"] === "success") {
+                        $.cookie("mytoken", response["token"], { path: "/" });
+                        window.location.replace("/");
                     } else {
-                        alert(response['msg']);
+                        alert(response["msg"]);
                     }
-                }
-            })
+                },
+            });
         }
 
         function sign_up() {
-            let username = ''
-            let password = ''
-            let password2 = ''
+            let username = $('#input-username').val();
+            let password = $('#input-password').val();
+            let password2 = $('#input-password2').val();
+            let helpId = $('#help-id');
+            let helpPass = $("#help-password");
+            let helpPass2 = $("#help-password2");
+            let inputPass = $("#input-password");
+            let inputPass2 = $("#input-password2");
+            console.log(username, password, password2)
+
+            if (helpId.hasClass("is-danger")) {
+                alert('please check your id')
+                return
+            } else if (!helpId.hasClass('is-success')) {
+                alert('Please double check your id')
+                return
+            }
+
+            if (password === '') {
+                helpPass.text('please enter your password')
+                    .removeClass('is-safe')
+                    .addClass('is-danger')
+                inputPass.focus()
+                return
+            } else if (!is_password(password)) {
+                helpPass.text('Please check your password. For your password, please enter 8-20 English characters, numbers, or the following special characters (!@#$%^&*)')
+                    .removeClass('is-safe')
+                    .addClass('is-danger')
+                inputPass.focus();
+                return
+            } else {
+                helpPass.text('This password can be used')
+                    .removeClass('is-danger')
+                    .addClass('is-success')
+            }
+
+            if (password2 === '') {
+                helpPass2.text('please enter your password')
+                    .removeClass('is-safe')
+                    .addClass('is-danger')
+                inputPass2.focus()
+                return
+            } else if (password2 !== password) {
+                helpPass2.text('your password does not match!')
+                    .removeClass('is-safe')
+                    .addClass('is-danger')
+                inputPass2.focus()
+                return
+            } else {
+                helpPass2.text('Your password does not match')
+                    .removeClass('is-danger')
+                    .addClass('is-success')
+            }
+
 
             $.ajax({
-                type: 'POST',
-                url: '/sign_up/save',
+                type: "POST",
+                url: "/sign_up/save",
                 data: {
                     username_give: username,
-                    password_give: password
+                    password_give: password,
                 },
                 success: function (response) {
-                    alert('You are registered')
-                    window.location.replace = '/login'
-                }
+                    alert("Your are signed up! Nice!");
+                    window.location.replace("/login");
+                },
+            });
+        }
 
+
+        function toggle_sign_up() {
+            $("#sign-up-box").toggleClass("is-hidden")
+            $("#div-sign-in-or-up").toggleClass("is-hidden")
+            $("#btn-check-dup").toggleClass("is-hidden")
+            $("#help-id").toggleClass("is-hidden")
+            $("#help-password").toggleClass("is-hidden")
+            $("#help-password2").toggleClass("is-hidden")
+        }
+
+        function is_nickname(asValue) {
+            var regExp = /^(?=.*[a-zA-Z])[-a-zA-Z0-9_.]{2,10}$/;
+            return regExp.test(asValue);
+        }
+
+        function is_password(asValue) {
+            var regExp = /^(?=.*\d)(?=.*[a-zA-Z])[0-9a-zA-Z!@#$%^&*]{8,20}$/;
+            return regExp.test(asValue);
+        }
+
+        function check_dup() {
+            let inputUsername = $('#input-username')
+            let helpId = $('#help-id')
+            let username = inputUsername.val()
+            if (username === '') {
+                helpId.text("Please enter your id")
+                    .removeClass('is-safe')
+                    .addClass('is-danger');
+                inputUsername.focus()
+                return
+            }
+
+            if (!is_nickname(username)) {
+                helpId.text('for your id please type 2-10 English character, number and special character (._-)')
+                    .removeClass('is-safe')
+                    .addClass('is-danger');
+                inputUsername.focus()
+                return
+            }
+
+            helpId.addClass('is-loading')
+            $.ajax({
+                type: 'POST',
+                url: '/sign_up/check_dup',
+                data: {
+                    username_give: username,
+                },
+                success: function (response) {
+                    console.log('response', response)
+                    if (response['exists']) {
+                        helpId.text('this id is already used')
+                            .removeClass('is-safe')
+                            .addClass('is-danger')
+                        inputUsername.focus()
+                    } else {
+                        helpId.text('this id is available')
+                            .removeClass('is-danger')
+                            .addClass('is-success')
+                    }
+                    helpId.removeClass('is-loading')
+                }
             })
+
+            console.log('finished')
+        }
+
+        function clearInput() {
+            $('#input-username').val('');
+            $('#input-password').val('');
+            $('#input-password2').val('');
         }
     </script>
-
-    <style>
-        * {
-            font-family: 'Noto Serif Display', serif;
-        }
-
-        body {
-            background-color: rgba(232, 52, 78, 0.2);
-            min-height: 100vh;
-
-        }
-
-        .section {
-            padding: 1rem 1.5rem;
-            max-width: 750px;
-            margin: auto;
-        }
-
-        .title {
-            font-weight: 800;
-            font-size: 5rem;
-        }
-
-        .subtitle {
-            font-size: 2rem;
-        }
-
-        .is-sparta {
-            color: #e8344e;
-        }
-    </style>
 </head>
 
 <body>
@@ -114,44 +226,81 @@
     <!-- Login Form-->
     <section class="section">
         <div class="container">
-            <div class="box" style="max-width: 480px; margin: auto;">
+            <div class="box" style="max-width: 480px; margin: auto">
                 <article class="media">
                     <div class="media-content">
                         <div class="content">
                             <div class="field has-addons">
-                                <div class="control has-icons-left" style="width: 100%;">
-                                    <input id="input-username" class="input" type="text" placeholder="id">
-                                    <span class="icon is-small is-left">
-                                        <i class="fa fa-user"></i>
-                                    </span>
+                                <div class="control has-icons-left" style="width: 100%">
+                                    <input id="input-username" class="input" type="text" placeholder="id" />
+                                    <span class="icon is-small is-left"><i class="fa fa-user"></i></span>
                                 </div>
-                                <div id="btn-check-dup" class="control">
-                                    <button class="button is-sparta" onclick="check_dup">
-                                        Check Your Id
+                                <div id="btn-check-dup" class="control is-hidden">
+                                    <button class="button is-sparta" onclick="check_dup()">
+                                        Check your id
                                     </button>
                                 </div>
                             </div>
-                            <p id="help-id" class="help">
-                                for your id please type 2-10 English character, number and special character (._-)
+                            <p id="help-id" class="help is-hidden">
+                                For your id, please enter 2-10 English characters, numbers, or
+                                the following special characters (._-)
                             </p>
-                            <p id="help-id-login" class="help is-danger">
+                            <p id="help-id-login" class="help is-danger"></p>
+
                             <div class="field">
                                 <div class="control has-icons-left">
-                                    <input id="input-password" class="input" type="password" placeholder="password">
-                                    <span class="icon is-small is-left">
-                                        <i class="fa fa-lock"></i>
-                                    </span>
+                                    <input id="input-password" class="input" type="password" placeholder="password" />
+                                    <span class="icon is-small is-left"><i class="fa fa-lock"></i></span>
                                 </div>
-                                <p id="help-password" class="help">
-                                    for your password please enter 8-20 character, number, or special character
-                                    (!@#$%^&*)
+                                <p id="help-password" class="help is-hidden">
+                                    For your password, please enter 8-20 English characters,
+                                    numbers, or the following special characters (!@#$%^&*)
                                 </p>
                             </div>
-                            </p>
                         </div>
                         <div id="div-sign-in-or-up" class="has-text-centered">
                             <nav class="level is-mobile">
-                                <button class="level-item button is-sparta" onclick="sign_in()">Sign In</button>
+                                <button class="level-item button is-sparta" onclick="sign_in()">
+                                    Sign In
+                                </button>
+                                <button class="level-item button is-sparta" onclick="clearInput()">
+                                    Clear
+                                </button>
+
+                            </nav>
+                            <hr />
+                            <h4 class="mb-3">If you have not yet signed up</h4>
+                            <nav class="level is-mobile">
+                                <button class="level-item button is-sparta is-outlined" onclick="toggle_sign_up()">
+                                    Sign Up
+                                </button>
+                            </nav>
+                        </div>
+
+                        <div id="sign-up-box" class="is-hidden">
+                            <div class="mb-5">
+                                <div class="field">
+                                    <div class="control has-icons-left" style="width: 100%">
+                                        <input id="input-password2" class="input" type="password"
+                                            placeholder="Confirm your password" />
+                                        <span class="icon is-small is-left"><i class="fa fa-lock"></i></span>
+                                    </div>
+                                    <p id="help-password2" class="help">
+                                        Please enter in your password again
+                                    </p>
+                                </div>
+                            </div>
+                            <nav class="level is-mobile">
+                                <button class="level-item button is-sparta" onclick="sign_up()">
+                                    Sign Up
+                                </button>
+                                <button class="level-item button is-sparta is-outlined" onclick="toggle_sign_up()">
+                                    Cancel
+                                </button>
+                                <button class="level-item button is-sparta is-outlined" onclick="clearInputs()">
+                                    Clear
+                                </button>
+
                             </nav>
                         </div>
                     </div>
@@ -159,7 +308,6 @@
             </div>
         </div>
     </section>
-    <!-- Login End-->
 </body>
 
 </html>
