--- a/templates/secret.html
+++ b/templates/secret.html
@@ -2,10 +2,15 @@
 <html lang="en">
 
 <head>
+    <link rel="shortcut icon" href="{{ url_for('static',filename ='favicon.ico') }}" type="image/x-icon">
+    <meta property="og:title" content="Sweeter - the sweetest site">
+    <meta property="og:description" content="Are you looking for me">
+    <meta property="og:image" content="{{ url_for('static', filename=ogimage.jpg) }}">
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Secret</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 
@@ -19,6 +24,9 @@
             </p>
             <p class="subtitle">
                 You need to be logged in to see this
+            </p>
+            <p class="subtitle">
+                {{ user_info.profile_name }}
             </p>
         </div>
     </section>
