--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" href="{{ url_for('static',filename ='favicon.ico') }}" type="image/x-icon">
     <meta property="og:title" content="Sweeter - the sweetest site">
     <meta property="og:description" content="Are you looking for me">
-    <meta property="og:image" content="{{ url_for('static', filename=ogimage.jpg) }}">
+    <meta property="og:image" content="{{ url_for('static', filename='ogimage.jpg') }}">
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
