--- a/templates/user.html
+++ b/templates/user.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="{{ url_for('static',filename ='favicon.ico') }}" type="image/x-icon">
     <meta property="og:title" content="Sweeter - the sweetest site">
     <meta property="og:description" content="Are you looking for me">
-    <meta property="og:image" content="{{ url_for('static', filename=user_info.profile_pic_real) }}"
+    <meta property="og:image" content="{{ url_for('static', filename=user_info.profile_pic_real) }}">
 
 
     <meta charset="UTF-8">
